--- a/components/home/contact/contact.module.scss
+++ b/components/home/contact/contact.module.scss
@@ -39,18 +39,13 @@
   align-items: center;
   justify-content: center;
   gap: 0.8rem;
-  
   width: fit-content;
-  
   font-size: var(--text-md);
-  
   margin: auto;
-  
   transition: 0.5s;
-
-  padding: 12px 32px 12px 32px;
-  border-radius: 1rem;
-  background: var(--background-light);
+  // padding: 12px 32px 12px 32px;
+  // border-radius: 1rem;
+  // background: var(--background-light);
 }
 
 .contactEmail:hover {
