--- a/components/about/stats.module.scss
+++ b/components/about/stats.module.scss
@@ -21,6 +21,13 @@
   display: flex;
   flex-wrap: wrap;
   gap: 1.2rem;
-
   margin-bottom: 4.8rem;
+  span {
+    opacity: 0.6;
+    transition: 0.2s;
+    cursor: default;
+    &:hover {
+      opacity: 1;
+    }
+  }
 }
