--- a/components/certification/certification.module.scss
+++ b/components/certification/certification.module.scss
@@ -1,4 +1,4 @@
-.experience {
+.certification {
   margin-bottom: 2.4rem;
   padding: 0 1.2rem 2.4rem;
 
@@ -32,4 +32,13 @@
   display: flex;
   flex-wrap: wrap;
   gap: 1.2rem;
+  span {
+    opacity: 0.6;
+    transition: 0.2s;
+    cursor: default;
+    &:hover {
+      opacity: 1;
+    }
+  }
 }
+
