--- a/components/experience/experience.module.scss
+++ b/components/experience/experience.module.scss
@@ -32,4 +32,12 @@
   display: flex;
   flex-wrap: wrap;
   gap: 1.2rem;
+  span {
+    opacity: 0.6;
+    transition: 0.2s;
+    cursor: default;
+    &:hover {
+      opacity: 1;
+    }
+  }
 }
