--- a/components/projects/projects.module.scss
+++ b/components/projects/projects.module.scss
@@ -81,9 +81,14 @@
     color: var(--brand);
     cursor: pointer;
     margin-top: 1rem;
+    opacity: 0.8;
+    border-bottom: 1px solid var(--background);
+    transition: 0.2s;
   }
   span:hover {
-    text-decoration: underline;
+    // text-decoration: underline;
+    opacity: 1;
+    border-bottom: 1px solid var(--brand);
   }
 }
 
