--- a/components/projects/projectmodal.module.scss
+++ b/components/projects/projectmodal.module.scss
@@ -22,18 +22,16 @@
   width: 100%;
   max-width: 700px;
   height: fit-content;
-
   border-radius: 1.2rem;
   overflow: hidden;
-
   background: var(--background-light);
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
-
   cursor: auto;
 }
 
 .modalImage {
   width: 100%;
+  height: auto;
 }
 
 .modalContent {
