--- a/components/projects/projectmodal.module.scss
+++ b/components/projects/projectmodal.module.scss
@@ -5,7 +5,7 @@
   right: 0;
   z-index: 100000000;
 
-  height: 100vh;
+  height: 100%;
   padding: 4.8rem 1.2rem;
   background: var(--bg-opaque);
   backdrop-filter: blur(12px);
