--- a/components/projects/projectmodal.module.scss
+++ b/components/projects/projectmodal.module.scss
@@ -5,15 +5,16 @@
   right: 0;
   z-index: 100000000;
 
-  height: 100%;
   padding: 4.8rem 1.2rem;
   background: var(--bg-opaque);
   backdrop-filter: blur(12px);
 
-  overflow-y: scroll;
+  height: 100%;
+  overflow-y: fixed;
 
   display: flex;
   justify-content: center;
+  align-items: center;
 
   cursor: pointer;
 }
