--- a/components/projects/projectmodal.module.scss
+++ b/components/projects/projectmodal.module.scss
@@ -11,7 +11,7 @@
 
   height: 100%;
   overflow-y: fixed;
-  // -webkit-overflow-scrolling: fixed;
+  -webkit-overflow-scrolling: fixed;
 
   display: flex;
   justify-content: center;
