--- a/components/projects/projectmodal.module.scss
+++ b/components/projects/projectmodal.module.scss
@@ -10,8 +10,7 @@
   backdrop-filter: blur(12px);
 
   height: 100%;
-  overflow-y: fixed;
-  -webkit-overflow-scrolling: fixed;
+  overflow-y: hidden;
 
   display: flex;
   justify-content: center;
