--- a/components/projects/projectmodal.module.scss
+++ b/components/projects/projectmodal.module.scss
@@ -4,11 +4,11 @@
   left: 0;
   right: 0;
   z-index: 100000000;
-
+  
   padding: 4.8rem 1.2rem;
   background: var(--bg-opaque);
   backdrop-filter: blur(12px);
-
+  
   height: 100%;
 
   display: flex;
@@ -16,6 +16,8 @@
   align-items: center;
 
   cursor: pointer;
+
+  -webkit-overflow-scrolling: touch;
 }
 
 .modalCard {
