--- a/components/projects/projectmodal.module.scss
+++ b/components/projects/projectmodal.module.scss
@@ -4,11 +4,11 @@
   left: 0;
   right: 0;
   z-index: 100000000;
-  
+
   padding: 4.8rem 1.2rem;
   background: var(--bg-opaque);
   backdrop-filter: blur(12px);
-  
+
   height: 100%;
 
   display: flex;
@@ -16,8 +16,7 @@
   align-items: center;
 
   cursor: pointer;
-
-  -webkit-overflow-scrolling: touch;
+  overflow: hidden !important;
 }
 
 .modalCard {
@@ -25,7 +24,6 @@
   max-width: 700px;
   height: fit-content;
   border-radius: 1.2rem;
-  overflow: hidden;
   background: var(--background-light);
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
   cursor: auto;
