--- a/components/projects/projectmodal.module.scss
+++ b/components/projects/projectmodal.module.scss
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 100000000;
+  z-index: 999;
 
   padding: 4.8rem 1.2rem;
   background: var(--bg-opaque);
@@ -16,7 +16,6 @@
   align-items: center;
 
   cursor: pointer;
-  overflow: hidden !important;
 }
 
 .modalCard {
