--- a/components/projects/projectmodal.module.scss
+++ b/components/projects/projectmodal.module.scss
@@ -26,6 +26,8 @@
   background: var(--background-light);
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
   cursor: auto;
+  // overflow: auto
+  // -webkit-overflow-scrolling: touch
 }
 
 .modalImage {
