--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,6 +40,15 @@ body {
   background: var(--background);
 }
 
+.is-fixed {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  /* Allow the main content to be scrolled, */
+  /* so we can adjust the scroll position with JS. */
+  overflow: auto;
+}
+
 a {
   color: inherit;
   text-decoration: none;
