--- a/components/projects/projectmodal.module.scss
+++ b/components/projects/projectmodal.module.scss
@@ -26,13 +26,12 @@
   background: var(--background-light);
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
   cursor: auto;
-  // overflow: auto
-  // -webkit-overflow-scrolling: touch
 }
 
 .modalImage {
   width: 100%;
   height: auto;
+  border-radius: 1.2rem 1.2rem 0 0;
 }
 
 .modalContent {
