--- a/components/projects/projectmodal.module.scss
+++ b/components/projects/projectmodal.module.scss
@@ -106,7 +106,8 @@
   background: none;
   border: none;
   color: var(--text);
-  font-size: var(--text-md);
+  font-size: 2.5rem;
+  // font-size: var(--text-md);
   // position: absolute;
   // top: 2rem;
   // right: 2rem;
