--- a/components/projects/projectmodal.module.scss
+++ b/components/projects/projectmodal.module.scss
@@ -77,7 +77,7 @@
 .spaceBetween {
   display: flex;
   flex-direction: row;
-  justify-content: space-between
+  justify-content: space-between;
 }
 
 .links {
@@ -107,11 +107,10 @@
   border: none;
   color: var(--text);
   font-size: 2.5rem;
+  align-self: flex-end;
   // font-size: var(--text-md);
   // position: absolute;
   // top: 2rem;
   // right: 2rem;
   cursor: pointer;
-
-  
 }
