--- a/components/projects/projects.module.scss
+++ b/components/projects/projects.module.scss
@@ -23,6 +23,23 @@
     animation: none;
   }
 }
+
+.homeLink {
+  display: flex;
+  align-items: center;
+  padding-bottom: 5rem;
+  gap: 0.8rem;
+  width: fit-content;
+  font-size: var(--text-md);
+  margin: auto;
+  transition: 0.5s;
+  animation: opacity 2s infinite;
+  &:hover {
+    color: var(--brand);
+    animation: none;
+  }
+}
+
 @keyframes opacity {
   0% {
     opacity: 0.5;
@@ -34,8 +51,6 @@
     opacity: 0.5;
   }
 }
-
-
 
 .projectImage {
   width: 100%;
@@ -104,7 +119,7 @@
 .projectDescription {
   font-weight: 200;
   span {
-    display: inline-block;    
+    display: inline-block;
     font-size: var(--text-xs);
     font-weight: 400;
     color: var(--brand);
