--- a/components/projects/projects.module.scss
+++ b/components/projects/projects.module.scss
@@ -8,47 +8,28 @@
   }
 }
 
-.galleryLink {
+.linkToGallery {
   display: flex;
   align-items: center;
+  justify-content: center;
   padding-top: 2rem;
   gap: 0.8rem;
-  width: fit-content;
   font-size: var(--text-md);
-  margin: auto;
-  transition: 0.5s;
+  transition: all 0.2s ease-in-out;
   animation: opacity 2s infinite;
   &:hover {
-    color: var(--brand);
     animation: none;
   }
 }
-
-.homeLink {
-  display: flex;
-  align-items: center;
-  padding-bottom: 5rem;
-  gap: 0.8rem;
-  width: fit-content;
-  font-size: var(--text-md);
-  margin: auto;
-  transition: 0.5s;
-  animation: opacity 2s infinite;
-  &:hover {
-    color: var(--brand);
-    animation: none;
-  }
-}
-
 @keyframes opacity {
   0% {
-    opacity: 0.5;
+    opacity: 0.6;
   }
   50% {
     opacity: 1;
   }
   100% {
-    opacity: 0.5;
+    opacity: 0.6;
   }
 }
 
@@ -145,4 +126,30 @@
   color: var(--brand);
 
   margin: 0.8rem 0;
+}
+
+// Gallery =============================
+
+.galleryLink1 {
+  display: inline-block;
+  padding-bottom: 1rem;
+  transition: 0.1s;
+  opacity: 0.6;
+  &:hover {
+    opacity: 1;
+  }
+}
+
+.galleryLink2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 2rem;
+  gap: 0.8rem;
+  font-size: var(--text-md);
+  transition: 0.1s;
+  opacity: 0.6;
+  &:hover {
+    opacity: 1;
+  }
 }
