--- a/components/buttons/outlinebutton.module.scss
+++ b/components/buttons/outlinebutton.module.scss
@@ -2,7 +2,10 @@
   outline: none;
   border: none;
   cursor: pointer;
-
+  
+  display: flex;
+  align-items: center;
+  gap: 1rem;
   padding: 1rem 2rem;
 
   border: 1px solid var(--brand);
@@ -13,21 +16,11 @@
 
   position: relative;
   z-index: 20;
-
   overflow: hidden;
-
   transition: 0.2s color;
 
-  svg {
-    display: none;
-  }
-
   @media (max-width: 420px) {
-    font-size: 0;
-    padding: .5rem .5rem;
-    svg {
-      display: block;
-    }
+    padding: 1rem;
   }
 }
 
