--- a/components/certification/certification.module.scss
+++ b/components/certification/certification.module.scss
@@ -22,9 +22,13 @@
   font-weight: bold;
 }
 
-.position {
+.school {
   color: var(--brand);
   font-weight: bold;
+}
+
+.certificate:hover {
+  color: var(--brand);
 }
 
 .description {
