Update About section texts

--- a/components/about/about.module.scss
+++ b/components/about/about.module.scss
@@ -11,6 +11,11 @@
 .aboutText {
   margin-bottom: 2.4rem;
   font-weight: 200;
+  text-align: justify;
+
+  span {
+    font-weight: 600;
+  }
 }
 
 .links {
