--- a/components/contact/contact.module.scss
+++ b/components/contact/contact.module.scss
@@ -1,8 +1,8 @@
 .contactWrapper {
   max-width: 700px;
-  margin: auto;
-  
+  margin: auto;  
   border-radius: 1.2rem;
+  height: 100vh;
 }
 
 .contactTitle {
@@ -10,11 +10,9 @@
   text-align: center;
   font-weight: 900;
   line-height: 1;
-
   span {
     color: var(--brand);
   }
-
   @media (max-width: 768px) {
     font-size: var(--text-xl);
   }
@@ -34,7 +32,6 @@
   a:hover {
     opacity: 1;
     border-bottom: 2px solid var(--brand);
-    // text-decoration: underline;
   }
 }
 
