--- a/components/projects/projects.module.scss
+++ b/components/projects/projects.module.scss
@@ -8,31 +8,6 @@
   }
 }
 
-.linkToGallery {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding-top: 2rem;
-  gap: 0.8rem;
-  font-size: var(--text-md);
-  transition: all 0.2s ease-in-out;
-  animation: opacity 2s infinite;
-  &:hover {
-    animation: none;
-  }
-}
-@keyframes opacity {
-  0% {
-    opacity: 0.6;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0.6;
-  }
-}
-
 .projectImage {
   width: 100%;
   aspect-ratio: 16 / 9;
@@ -111,7 +86,6 @@
     transition: 0.2s;
   }
   span:hover {
-    // text-decoration: underline;
     opacity: 1;
     border-bottom: 1px solid var(--brand);
   }
@@ -126,4 +100,52 @@
   color: var(--brand);
 
   margin: 0.8rem 0;
+}
+
+.linkToGallery {
+  display: flex;
+  justify-content: center;
+  padding-top: 2rem;
+
+  a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+    padding-right: 3.5rem;
+
+    font-size: var(--text-md);
+    opacity: 0.8;
+
+    transition: opacity 0.2s ease;
+
+    &:hover {
+      opacity: 1;
+    }
+
+    svg {
+      animation: point 1.2s ease-in-out infinite;
+    }
+  }
+}
+
+@keyframes point {
+  0% {
+    transform: translateX(0);
+  }
+  20% {
+    transform: translateX(5px);
+  }
+  40% {
+    transform: translateX(0);
+  }
+  60% {
+    transform: translateX(5px);
+  }
+  80% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(0);
+  }
 }
