--- a/components/gallery/gallery.module.scss
+++ b/components/gallery/gallery.module.scss
@@ -145,12 +145,38 @@
   align-items: center;
   justify-content: center;
   padding-top: 2rem;
-  gap: 0.8rem;
+
+  gap: 1rem;
+  padding-right: 3rem;
+
   font-size: var(--text-md);
-  transition: 0.1s;
-  opacity: 0.6;
+  opacity: 0.8;
+
+  transition: opacity 0.2s ease;
   &:hover {
     opacity: 1;
   }
+  svg {
+    animation: point 1.2s ease-in-out infinite;
+  }
 }
-
+@keyframes point {
+  0% {
+    transform: translateX(0);
+  }
+  20% {
+    transform: translateX(5px);
+  }
+  40% {
+    transform: translateX(0);
+  }
+  60% {
+    transform: translateX(5px);
+  }
+  80% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
