Add cool page transitions

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,6 +38,17 @@ body {
 body {
   color: var(--text);
   background: var(--background);
+  /* For "TransitionLink" animation */
+  transition-property: opacity, transform, filter, background;
+  transition-timing-function: ease-in-out;
+  transition-duration: 500ms;
+}
+/* For "TransitionLink" animation */
+.page-transition {
+  opacity: 0;
+  background: black;
+  transform: translateY(40px);
+  filter: blur(12px);
 }
 
 a {
