--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@
   --background-dark: rgb(8, 8, 8);
 
   --text: rgb(235, 236, 243);
-  --brand: #dd58d6;
+  --brand: #BE63F9;
 
   --text-xs: 1.6rem;
   --text-sm: 1.8rem;
