--- a/app/globals.css
+++ b/app/globals.css
@@ -27,7 +27,7 @@
 
 html,
 body {
-  max-width: 100vw;
+  max-width: 100%;
   /* scroll-behavior: smooth; */
   scroll-behavior: auto;
   font-size: var(--text-sm);
@@ -66,8 +66,16 @@ a {
 @media (max-width: 768px) {
   .section-wrapper {
     padding: 7.2rem 2.4rem;
-  }
+  }  
 }
+@media (max-width: 450px) {
+  .section-wrapper {
+    max-width: 315px;
+    padding: 3rem 1.5rem;
+  }  
+}
+
+
 
 /* Stats - Exp. - Certif. */
 .chip {
