--- a/components/hero/hero.module.scss
+++ b/components/hero/hero.module.scss
@@ -7,6 +7,9 @@
     margin-top: 1.5rem;
     margin-bottom: 4.8rem;
   }
+  @media (max-width: 450px) {
+    padding: 0 0.5rem;
+  }
 }
 
 .copyWrapper {
@@ -49,26 +52,6 @@
   font-weight: 200;
 }
 
-.profile {
-  margin: 2rem;
-  z-index: 10;
-  position: relative;
-  margin-right: 9rem;
-  border-radius: 50%;
-  outline: solid;
-  outline-width: 3px;
-  outline-color: var(--brand);
-  outline-offset: 6px;
-  transition: .4s;
-  
-  &:hover {
-    outline: dotted;
-    outline-color: var(--brand);
-    outline-offset: 10px;
-    transform: scale(105%);
-  }
-}
-
 .heroGrid {
   gap: 1.5rem;
   display: flex;
@@ -81,15 +64,6 @@
     flex-direction: column-reverse;
     align-items: start;
     flex-wrap: wrap;
-
-    .profile {
-      height: 150px;
-      width: 150px;
-      margin-right: 0;
-      margin-bottom: -30px;
-      margin-top: 3rem;
-      margin-left: 1.5rem;
-    }
   }
 
   @media (max-width: 980px) {
