--- a/components/certification/certification.module.scss
+++ b/components/certification/certification.module.scss
@@ -38,6 +38,9 @@
   margin-bottom: 1.8rem;
   font-weight: 200;
   text-align: justify;
+  @media (max-width: 450px) {
+    text-align: left;
+  }
 }
 
 .tech {
