--- a/components/experience/experience.module.scss
+++ b/components/experience/experience.module.scss
@@ -30,7 +30,10 @@
 .description {
   margin-bottom: 1.8rem;
   font-weight: 200;
-  text-align: justify
+  text-align: justify;
+  @media (max-width: 450px) {
+    text-align: left;
+  }    
 }
 
 .tech {
