--- a/components/experience/experience.module.scss
+++ b/components/experience/experience.module.scss
@@ -3,6 +3,10 @@
   padding: 0 1.2rem 2.4rem;
 
   border-bottom: 1px solid var(--background-light);
+
+  @media (max-width: 450px) {
+    padding: 0 0 2.4rem;
+  }
 }
 
 .heading {
