--- a/components/hero/hero.module.scss
+++ b/components/hero/hero.module.scss
@@ -66,6 +66,11 @@
     flex-wrap: wrap;
   }
 
-  @media (max-width: 980px) {
+}
+
+.breakline {
+  display: static;
+  @media (max-width: 800px) {
+    display: none;
   }
 }
