--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -69,8 +69,8 @@ a {
 }
 @media (max-width: 450px) {
   .section-wrapper {
-    max-width: 315px;
-    padding: 3rem 0.5rem;
+    width: 300px;
+    padding: 3rem 1rem;
   }  
 }
 
