--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -61,7 +61,6 @@ a {
   padding: 9.6rem;
   overflow: hidden;
 }
-
 @media (max-width: 768px) {
   .section-wrapper {
     padding: 7.2rem 2.4rem;
@@ -70,7 +69,12 @@ a {
 @media (max-width: 450px) {
   .section-wrapper {
     width: 300px;
-    padding: 3rem 1rem;
+    padding: 3rem 0.5rem;
+  }  
+}
+@media (max-width: 360px) {
+  .section-wrapper {
+    width: 240px;
   }  
 }
 
