--- a/components/contact/contact.module.scss
+++ b/components/contact/contact.module.scss
@@ -47,4 +47,14 @@
   &:hover {
     color: var(--brand);
   }
-}
+
+  @media (max-width: 450px) {
+    font-size: var(--text-sm);
+    }  
+
+    @media (max-width: 360px) {
+      font-size: 15px;
+    }  
+
+  }
+
