--- a/components/contact/contact.module.scss
+++ b/components/contact/contact.module.scss
@@ -15,6 +15,11 @@
   @media (max-width: 768px) {
     font-size: var(--text-xl);
   }
+
+  @media (max-width: 360px) {
+    font-size: var(--text-lg);
+  }  
+
 }
 
 .contactCopy {
