--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -53,6 +53,16 @@ a {
   text-decoration: none;
 }
 
+button, input[type="submit"], input[type="reset"] {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
 .section-wrapper {
   position: relative;
   z-index: 10;
