--- a/components/gallery/gallery.module.scss
+++ b/components/gallery/gallery.module.scss
@@ -66,7 +66,7 @@
 
 .galleryItem {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   gap: 3.2rem;
   margin-top: 2rem;
   margin-bottom: 2rem;
