--- a/components/gallery/gallery.module.scss
+++ b/components/gallery/gallery.module.scss
@@ -50,7 +50,7 @@
   padding: 0.5rem 1.5rem;
   border-radius: 999px;
 
-  opacity: 0.6;
+  opacity: 0.5;
   transition: 0.2s;
 
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -61,7 +61,7 @@
 }
 .active {
   opacity: 1;
-  color: var(--brand);
+  color: whitesmoke;
 }
 
 .galleryItem {
