--- a/components/showcase/modal.module.scss
+++ b/components/showcase/modal.module.scss
@@ -95,8 +95,11 @@
     font-size: var(--text-xs);
     font-weight: 400;
     color: var(--brand);
-    opacity: 1;
+    opacity: 0.70;
     transition: 0.2s;
+    &:hover {
+      opacity: 1;
+    }
   }
 }
 
