--- a/components/showcase/showcase.module.scss
+++ b/components/showcase/showcase.module.scss
@@ -106,6 +106,7 @@
   display: flex;
   justify-content: center;
   padding-top: 2rem;
+  padding-bottom: 2rem;
 
   a {
     display: flex;
@@ -128,6 +129,7 @@
     }
   }
 }
+
 
 @keyframes point {
   0% {
