--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -120,3 +120,15 @@ input[type="reset"] {
 ::-webkit-scrollbar-thumb:hover {
   background-color: var(--brand);
 }
+
+/* Modal img loading */
+.blur {
+  filter: blur(5px);
+  transition: filter 0.3s ease-in;
+}
+ 
+.remove-blur {
+  filter: blur(0px);
+  transition: filter 0.3s ease-in;
+}
+
