Update contact styling

--- a/components/contact/contact.module.scss
+++ b/components/contact/contact.module.scss
@@ -39,7 +39,11 @@
   }
 }
 
-.contactEmail {
+.contactLinks {  
+  margin-bottom: 1rem;
+}
+
+.contactLink {
   display: flex;
   align-items: center;
   justify-content: center;
