--- a/components/showcase/modal.module.scss
+++ b/components/showcase/modal.module.scss
@@ -95,7 +95,7 @@
     font-size: var(--text-xs);
     font-weight: 400;
     color: var(--brand);
-    opacity: 0.70;
+    opacity: 0.7;
     transition: 0.2s;
     &:hover {
       opacity: 1;
@@ -110,29 +110,24 @@
   justify-content: center;
   align-items: center;
 
-  top: 0.5rem;
-  right: 0.5rem;
-  // left: 50%;
-  // transform: translateX(-50%);
+  top: 1rem;
+  left: 50%;
+  transform: translateX(-50%);
 
+  font-size: 2.5rem;
   width: 3.25rem;
   height: 3.25rem;
   border-radius: 50%;
 
   color: var(--text);
   background-color: var(--background-light);
-  opacity: 0.7;
 
-  font-size: 2.5rem;
-  align-self: flex-end;
   cursor: pointer;
-  transition: 0.2s;
 
   svg {
     opacity: 0.7;
     transition: 0.2s;
   }
-
   &:hover {
     svg {
       opacity: 1;
