Update CV button

--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -80,14 +80,14 @@ input[type="reset"] {
 }
 @media (max-width: 450px) {
   .section-wrapper {
-    width: 300px;
-    padding: 3rem 0.75rem;
+    max-width: 300px;
+    padding: 3rem 1.5rem;
     font-size: var(--text-xs);
   }
 }
  @media (max-width: 320px) {
   .section-wrapper {
-    width: 240px;
+    max-width: 240px;
   }
 } 
 
