--- a/components/nav/heading.module.scss
+++ b/components/nav/heading.module.scss
@@ -18,6 +18,9 @@
   @media (max-width: 768px) {
     padding: 0 2.4rem;
   }
+  @media (max-width: 768px) {
+    padding: 0 2.4rem;
+  }
 }
 
 .headingButtons {
@@ -26,7 +29,7 @@
   justify-content: space-between;
   gap: 1rem;
 
-  a {
+  > a {
     height: 46px;
   }
 }
