--- a/components/nav/mylinks.module.scss
+++ b/components/nav/mylinks.module.scss
@@ -15,7 +15,7 @@
     opacity: 1;
   }
 
-  @media (max-width: 450px) {
-    // gap: 1.3rem;
+  @media (max-width: 480px) {
+    gap: 1.2rem;
   }
 }
