--- a/components/showcase/showcase.module.scss
+++ b/components/showcase/showcase.module.scss
@@ -83,12 +83,14 @@
     margin-top: 1rem;
     opacity: 0.7;
     transition: 0.2s;
-    // border-bottom: 1px solid var(--background);
+    @media (max-width: 768px) {
+      opacity: 1;
+    }
   }
   span:hover {
     opacity: 1;
-    // border-bottom: 1px solid var(--brand);
   }
+  
 }
 
 .projectTech {
