--- a/components/about/about.module.scss
+++ b/components/about/about.module.scss
@@ -11,7 +11,7 @@
 .aboutText {
   margin-bottom: 2.4rem;
   font-weight: 200;
-  text-align: justify;
+  // text-align: justify;
   span {
     font-weight: 600;
   }
