--- a/components/experience/experience.module.scss
+++ b/components/experience/experience.module.scss
@@ -35,7 +35,7 @@
 .description {
   margin-bottom: 1.8rem;
   font-weight: 200;
-  text-align: justify;  
+  // text-align: justify;  
 }
 
 .tech {
