--- a/components/showcase/modal.module.scss
+++ b/components/showcase/modal.module.scss
@@ -42,7 +42,7 @@
   h4 {
     font-size: var(--text-lg);
   }
-  text-align: justify;
+  // text-align: justify;
 }
 
 .modalTech {
@@ -95,13 +95,10 @@
     font-size: var(--text-xs);
     font-weight: 400;
     color: var(--brand);
-    opacity: 0.7;
+    opacity: 1;
     transition: 0.2s;
     &:hover {
-      opacity: 1;
-    }
-    @media (max-width: 768px) {
-      opacity: 1;
+      opacity: 0.8;
     }
   }
 }
