--- a/components/hero/hero.module.scss
+++ b/components/hero/hero.module.scss
@@ -87,3 +87,25 @@
     display: none;
   }
 }
+
+.contactButton {
+  outline: none;
+  border: none;
+  overflow: hidden;
+  cursor: pointer;
+  
+  z-index: 20;
+  padding: 1.2rem 2.4rem;
+
+  background: #9448c8;
+  color: white;
+  font-size: var(--text-sm);
+  border-radius: 4px;
+
+  transition: 0.2s opacity;
+
+  &:hover {
+    opacity: 0.80;
+  }
+}
+
