--- a/components/utils/home.module.scss
+++ b/components/utils/home.module.scss
@@ -3,7 +3,7 @@
   grid-template-columns: 60px 1fr;
 }
 
-// Privacy, Legal Notice
+// Privacy + Legal Notice pages
 .legal {
   max-width: 1150px;
   margin: auto;
@@ -14,17 +14,12 @@
   padding: 10rem;
   gap: 2rem;
 
-  @media (max-width: 768px) {
-    padding: 7rem 3rem;
-  }
-  @media (max-width: 480px) {
-    max-width: 360px;
-    padding: 3rem 1.5rem;
-    font-size: var(--text-xs);
+  h2 {
+    margin-top: 4rem;
   }
 
-  h2 {
-    margin-top: 5rem;
+  h3 {
+    margin-top: 2rem;
   }
 
   a {
@@ -32,5 +27,14 @@
     &:hover {
       color: var(--brand);
     }
+  }
+
+  @media (max-width: 768px) {
+    padding: 7rem 3rem;
+  }
+  @media (max-width: 480px) {
+    max-width: 360px;
+    padding: 3rem 1.5rem;
+    font-size: var(--text-xs);
   }
 }
