--- a/components/utils/sectionHeader.module.scss
+++ b/components/utils/sectionHeader.module.scss
@@ -14,12 +14,12 @@
     color: var(--brand);
   }
 
-  @media (max-width: 768px) {
-    font-size: var(--text-lg);
-  }
+  // @media (max-width: 768px) {
+  //   font-size: var(--text-lg);
+  // }
   
   @media (max-width: 360px) {
-    font-size: var(--text-md);
+    font-size: var(--text-lg);
   }  
 }
 
